--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,14 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Saijin_Naib's GitHub
-description: GitHub Page
+title: Carlocktography
+description: Carlocktograhy's GitHub Page
 github_username: Saijin-Naib
 
 # Email and twitter are optional:
-email:
-twitter_username:
+email: Carlocktography@Outlook.com
+#twitter_username:
+mastodon_username: @Brett_E_Carlock@Mastodon.Online
 
 # Set this to true to get LaTeX math equation support
 use_math: true
@@ -27,6 +28,7 @@ plugins:
   - jekyll-gist
   - jekyll-octicons
   - jekyll-github-metadata
+  - jekyll-remote-theme
 
 titles_from_headings:
   enabled:     true
