--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
   date_format: "%Y-%m-%d"
+  skin: dark
 
   # generate social links in footer
   social_links:
@@ -23,8 +24,8 @@ minima:
     #- { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
     #- { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
     #- { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-    #- { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
-     - { platform: mastodon,       user_url: "https://mastodon.online/Brett_E_Carlock" }
+     - { platform: linkedin,       user_url: "https://www.linkedin.com/in/brettedmondcarlock" }
+     - { platform: mastodon,       user_url: "https://mastodon.online/@Brett_E_Carlock" }
     #- { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
     #- { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
     #- { platform: rss,            user_url: "https://www.jekyll.com/" }
@@ -36,7 +37,7 @@ minima:
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 #header_pages:
-# - about.md
+  - about.md
 
 # Build settings
 theme: minima
