--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@ minima:
     #- { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
     #- { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
     #- { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-     - { platform: github,         user_url: "https://github.com/Saijin-Naib" }
+     - { platform: github,         user_url: "https://github.com/Carlocktography" }
     #- { platform: gitlab,         user_url: "https://gitlab.com/jekyl/minima" }
     #- { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
     #- { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
     #- { platform: keybase,        user_url: "https://keybase.io/jekyll" }
-     - { platform: linkedin,       user_url: "https://www.linkedin.com/in/brettedmondcarlock" }
-     - { platform: mastodon,       user_url: "https://mastodon.online/@Brett_E_Carlock" }
+    #- { platform: linkedin,       user_url: "https://www.linkedin.com/in/brettedmondcarlock" }
+    #- { platform: mastodon,       user_url: "https://mastodon.online/@Brett_E_Carlock" }
     #- { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
     #- { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
     #- { platform: rss,            user_url: "https://www.jekyll.com/" }
