--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Carlocktography
 author:
-  name: Saijin-Naib
-  email: Carlocktography@Outlook.com
+  name: "Saijin-Naib"
+  email: "Carlocktography@Outlook.com"
 description: > # this means to ignore newlines until "show_excerpts:"
   GIS, Remote Sensing, and IT Services company focused on Free/Open-Source software, data, and standards
 
-show_excerpts: false # set to true to show excerpts on the homepage
+show_excerpts: true # set to true to show excerpts on the homepage
 
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -40,7 +40,6 @@ minima:
 
 # Build settings
 theme: minima
-  skin: dark
 
 plugins:
  - jekyll-feed
