--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Carlocktography
 author:
-  name: "Saijin-Naib"
+  name: "Carlocktography"
   email: "Carlocktography@Outlook.com"
 description: > # this means to ignore newlines until "show_excerpts:"
   GIS, Remote Sensing, and IT Services company focused on Free/Open-Source software, data, and standards
