--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author:
   name: "Carlocktography"
   email: "Carlocktography@Outlook.com"
 description: > # this means to ignore newlines until "show_excerpts:"
-  GIS, Remote Sensing, and IT Services company focused on Free/Open-Source software, data, and standards
+  GIS, Remote Sensing, IT, and sUAS Services company focused on Free/Open-Source software, data, and standards
 
 show_excerpts: true # set to true to show excerpts on the homepage
 
