--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ minima:
 # this and add the path to the pages in order as they should show up
 header_pages:
 - services.md
+- giveback.md
 - about.md
 
 # Build settings
